--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ jobs:
   include:
     - stage: build with maven & generate reports
       script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker pull postgres:9.6.12
         - mvn clean verify jacoco:report coveralls:report
     - stage: build docker images for server and agent
       if: NOT branch = master OR type IN (pull_request)
